--- a/app/src/main/res/layout/my_actionbar.xml
+++ b/app/src/main/res/layout/my_actionbar.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="fill_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="40dp"
     android:weightSum="1"
     android:gravity="center|right"
-    android:padding="0dp"
     android:layout_margin="0dp"
     android:baselineAligned="false"
-    android:dividerPadding="3dp"
-    android:nestedScrollingEnabled="true">
+    android:measureWithLargestChild="false"
+    android:padding="3dp"
+    android:background="#ff0000">
 
-    <Spinner
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:id="@+id/sp_devices"
-        android:prompt="@string/BT_DEVICES"
-        android:spinnerMode="dropdown"
-        android:labelFor="@string/BT_DEVICES"
+    <!--<Spinner-->
+        <!--android:spinnerMode="dropdown"-->
+        <!--android:contentDescription="@string/BT_DEVICES"-->
+        <!--android:background="@android:color/background_light"-->
+        <!--android:padding="5dp"-->
+        <!--android:layout_marginLeft="3dp"-->
+        <!--android:layout_marginRight="3dp" />-->
+
+    <NoDefaultSpinner
+        android:layout_width="300dp"
+        android:layout_height="fill_parent"
         android:contentDescription="@string/BT_DEVICES"
-        android:background="@android:color/background_light"
-        android:minHeight="200dp"
-        android:padding="5dp" />
+        android:id="@+id/sp_devices"
+        android:spinnerMode="dropdown"
+        style="@style/spinner_style" />
+    <!--android:theme="@style/Base.Theme.AppCompat.Light"-->
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -29,21 +34,24 @@
         android:src="@drawable/bt_icon_off_128"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-        android:padding="2dp"
-        android:contentDescription="@string/menuBT_switch"/>
+        android:contentDescription="@string/menuBT_switch"
+        android:clickable="true"
+        android:background="@android:color/transparent"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp" />
 
     <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="fill_parent"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:id="@+id/overflow"
+        android:background="@android:color/holo_purple"
         android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
-        android:background="@android:color/transparent"
         android:clickable="true"
         android:layout_gravity="center"
         android:contentDescription="@string/menuOverflow"
-        android:padding="0dp"
-        android:textAlignment="center"
-        android:outlineProvider="bounds"
-        android:adjustViewBounds="true" />
+        android:adjustViewBounds="false"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp" />
+    <!--android:src="@drawable/ic_menu_moreoverflow_normal_holo_light"-->
 
 </LinearLayout>
