--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Base application theme. -->
-    <style name="MyAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:actionBarStyle">@style/MyActionBar</item>
-        <item name="actionBarStyle">@style/MyActionBar</item>
+    <style name="MyAppTheme" parent="Theme.AppCompat.Light">
+        <!--<item name="android:actionBarStyle">@style/MyActionBar</item>-->
+        <!--<item name="actionBarStyle">@style/MyActionBar</item>-->
+
     </style>
 
     <!-- ActionBar styles -->
     <style name="MyActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="android:windowActionBarOverlay">true</item>
         <item name="windowActionBarOverlay">true</item>
+        <item name="android:layout_gravity">right</item>
+        <item name="android:gravity">right</item>
         <!--<item name="android:height">50dp</item>-->
         <!--<item name="height">50dp</item>-->
-        <item name="android:minWidth">0dp</item>
-        <item name="android:minHeight">0dp</item>
-        <item name="android:layout_margin">0dp</item>
+        <!--<item name="android:minWidth">0dp</item>-->
+        <!--<item name="android:minHeight">0dp</item>-->
+        <!--<item name="android:layout_margin">0dp</item>-->
         <!--<item name="android:background">@color/color_actionbar</item>-->
         <!--<item name="background">@color/color_actionbar</item>-->
         <!--<item name="actionBarDivider"></item>-->
